# mjpeg-rs

./: Cargo.toml  build.rs
docker/: Dockerfile
src/: lib.rs
src/socket/: socket.c
