[package]
name = "mjpeg_rs"
version = "0.3.0"
authors = ["myduomilia <myduomilia@gmail.com>"]
edition = "2018"
build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc="0.2.68"
errno="0.2.5"
log = "0.4.8"
env_logger = "*"
base64 ="0.12.0"

[build-dependencies]
cc="1.0.50"
