[package]
name = "mjpeg_rs"
version = "0.5.0"
authors = ["myduomilia <myduomilia@gmail.com>"]
edition = "2018"
build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errno="0.2.5"
chrono = "0.4.15"
log = "0.4.8"
env_logger = "*"
base64 ="0.12.0"
trust-dns-resolver = "0.19.5"
image = "0.23.8"
ffmpeg-sys-next = "4.3.0"
libc = "0.2.73"

[dependencies.ffmpeg-next]
version = "4.3.6"
default-features = false
features = ["codec", "format","ffmpeg42","software-scaling"]


[build-dependencies]
cc="1.0.50"
